index adjusted for mobile, navabr fixed bottom and always visible, still carousel to add

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,7 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+.content-wrapper {
+  min-height: calc(100vh - 80px - 0px);
+}
