--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,12 @@
+.cards-dogs {
+  display: grid;
+  grid-template-columns: 1fr;
+  height: calc(100vh - 80px - 80px);
+  overflow: scroll;
+  padding: 0 24px 0 24px;
+  position: fixed;
+}
+
 .card-dog {
   background-color: transparent;
   border: none;
@@ -51,10 +60,4 @@
     }
 
   }
-}
-
-.cards {
-  display: grid;
-  grid-template-columns: 1fr;
-  padding: 0 24px 0 24px;
 }
